--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,13 @@
 mixin messageForm(cssName, placeholder, message)
-  .write(name='#write', class='#{cssName}')
-    form(method='post')
-      textarea(name='text', class='writeable', placeholder='#{placeholder}')= message
-      input(type='hidden', name='reply_to', value='', class='reply_to')
-      input(type='hidden', name='_csrf', value='#{csrf}')
-      span.counter 256
-      button(type='submit') Post
-      ol.suggestions(class='writeable')
+  if session
+    .write(name='#write', class='#{cssName}')
+      form(method='post')
+        textarea(name='text', class='writeable', placeholder='#{placeholder}')= message
+        input(type='hidden', name='reply_to', value='', class='reply_to')
+        input(type='hidden', name='_csrf', value='#{csrf}')
+        span.counter 256
+        button(type='submit') Post
+        ol.suggestions(class='writeable')
 
 !!! 5
 html
@@ -21,7 +22,7 @@ html
     link(rel='apple-touch-icon', sizes='128x128', href='/images/logo-128.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
 
-  body(data-url='#{url}', data-sessionid='#{loggedInId}')
+  body(data-url='#{url}', data-sessionid='#{loggedInId}', class='#{mediaOn}')
     #hush
 
     header
@@ -29,7 +30,8 @@ html
 
       if session
         a(href='/logout', id='logout', title='Sign out') Log out
-        a(href='/user/#{session.username}', id='profile-link', title='Your profile') Profile
+        a(href='#', id='settings-link', title='Settings') Settings
+        a(href='/user/#{session.username}', id='profile-link', title='Profile') Profile
         a(href='#', id='notifications', title='Notifications', class='') 0
 
     if session
