--- a/views/profile.jade
+++ b/views/profile.jade
@@ -30,7 +30,7 @@ block content
 
   section
     ol.tabs
-      li.user-posts.selected(data-url="/user/posts") Recent
+      li.user-posts.selected(data-url="/user/posts/#{user.id}") Recent
       li.user-mentions(data-url="/user/mentions/#{user.id}") Mentions
       li.user-starred(data-url="/user/starred/#{user.id}") Starred
 
