--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -929,6 +929,10 @@ time:hover {
     background-image: url('/images/delete.png');
 }
 
+.actions .quote {
+    background-image: url('/images/quote.png');
+}
+
 .actions .on {
     opacity: 1.0;
 }
@@ -1100,6 +1104,11 @@ img.hush {
 
     .actions .delete {
         background-image: url('/images/delete2x.png');
+        background-size: auto 25px;
+    }
+
+    .actions .quote {
+        background-image: url('/images/quote2x.png');
         background-size: auto 25px;
     }
 
