--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -47,6 +47,11 @@ table {
     border-spacing: 0;
 }
 
+html, body {
+    height: 100%;
+    position: relative;
+}
+
 @font-face {
     font-family: 'Oswald';
     src: url('../fonts/Oswald-Regular-webfont.woff') format('woff');
@@ -58,7 +63,6 @@ body {
     background-color: #fff;
     background-image: url('/images/background.png');
     font-family: Arial;
-    position: relative;
 }
 
 a.media-off, body.media-disable ol.messages > li p .image-wrapper,
