contextual submit button text

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extend layout
 
 block content
   if session
-    mixin messageForm('', 'Write your message', '')
+    mixin messageForm('', 'Write your message', '', 'Post')
 
     section
       ol.tabs
