support 140 char limitation

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -388,11 +388,11 @@ ol.messages #paginated.loading {
     float: left;
 }
 
-#directed-feed, #media-on {
+#directed-feed, #media-on, #charlimit {
     background-image: url('/images/settings-off.png');
 }
 
-#directed-feed.on, #media-on.on {
+#directed-feed.on, #media-on.on, #charlimit.on {
     background-image: url('/images/settings-on.png');
 }
 
