--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ mixin messageForm(cssName, placeholder, message, buttonText)
         textarea(name='text', class='writeable', placeholder='#{placeholder}')= message
         input(type='hidden', name='reply_to', value='', class='reply_to')
         input(type='hidden', name='_csrf', value='#{csrf}')
-        span.counter 256
+        span.counter= charLimit
         button(type='submit')= buttonText
         ol.suggestions(class='writeable')
 
@@ -22,7 +22,7 @@ html
     link(rel='apple-touch-icon', sizes='128x128', href='/images/logo-128.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
 
-  body(data-url='#{url}', data-sessionid='#{loggedInId}', class='#{mediaOn}')
+  body(data-url='#{url}', data-sessionid='#{loggedInId}', class='#{mediaOn}', data-charlimit='#{charLimit}')
     #hush
 
     header
