--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,11 +2,11 @@ mixin messageForm(cssName, placeholder, message, buttonText)
   if session
     .write(name='#write', class='#{cssName}')
       form(method='post')
-        textarea(name='text', class='writeable', placeholder='#{placeholder}')= message
+        textarea(name='text', class='writeable submittable', placeholder='#{placeholder}')= message
         input(type='hidden', name='reply_to', value='', class='reply_to')
         input(type='hidden', name='_csrf', value='#{csrf}')
         span.counter= charLimit
-        button(type='submit')= buttonText
+        button(type='submit', class='submittable')= buttonText
         ol.suggestions(class='writeable')
 
 !!! 5
