fixed layout for ios safari

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1238,6 +1238,12 @@ img.hush {
         padding: 5px 10px;
     }
 
+    #overlay .meta {
+        display: block;
+        float: left;
+        width: 270px;
+    }
+
     .meta .details, .meta .actions {
         width: 190px;
     }
