--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1002,6 +1002,13 @@ ol.messages .paginated {
     text-align: center;
 }
 
+p img.mood {
+    clear: both;
+    display: inline-block;
+    padding: 0 10px;
+    width: 32px;
+}
+
 #hush {
     width:100%;
     height: 100%;
