--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
     link(rel='apple-touch-icon', sizes='128x128', href='/images/logo-128.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
 
-  body(data-url='#{url}', data-sessionid='#{loggedInId}', class='#{mediaOn}', data-charlimit='#{charLimit}')
+  body(data-url='#{url}', data-username='#{loggedUsername}', data-sessionid='#{loggedInId}', class='#{mediaOn}', data-charlimit='#{charLimit}')
     #hush
 
     header
