give margin on close button

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -277,6 +277,7 @@ header a#notifications.on:hover {
 #overlay li.close {
     border-radius: 5px;
     float: right;
+    margin-bottom: 10px;
     padding: 5px 10px;
 }
 
